--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@font-face {
+    font-family: "Kara";
+    src: url("src/assets/fonts/SGKara-Regular.ttf");
+}
